# mach22-stm32-code

./: .gitignore  Cargo.toml  memory.x  run.sh
CubeMX/: SHAMANboard.ioc
src/: bmi055.rs  futures.rs  gps.rs  main.rs  mission.rs  radio.rs  rickroll.rs  sdcard.rs  usb_serial.rs
