[package]
name = "cansat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal="0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"

cassette = "0.2"
futures = { version = "0.3", default-features = false, features= ["async-await"] }
cortex-m-semihosting = "0.5.0"
bmp388 = "0.1.0"
libm = "0.2.2" 

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["rt", "stm32f411"] # replace the model of your microcontroller here
