[package]
name = "cansat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal="0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"

cassette = "0.2"
futures = { version = "0.3", default-features = false, features= ["async-await"] }
cortex-m-semihosting =  { version = "0.5.0", features = [] }
bmp388 = "0.1.0"
libm = "0.2.2" 
time={ version="0.3.9", default-features = false, features=["macros"]}
usb-device = "0.2.8"
usbd-serial = "0.1.0"
heapless = "0.7.13"
nmea0183 = "0.3.0"
phf = { version = "0.10", default-features = false, features=["macros"] }

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["rt", "stm32f411", "sdio", "sdio-host", "usb_fs"] # replace the model of your microcontroller here
